# oslab

./: .gitignore  HARDENED_INSTALL.md  LICENSE  README.md  environment.lock.yml  install.sh  pyproject.toml  start-oslab-v2.sh.template
benchmarks/: README.md
docs/: MANUAL.md  methods.md
docs/reports/: CDK2_OSLab_Detailed_Methods_and_FEP_Benchmark_Report.docx  CDK2_OSLab_Four_Block_Benchmark_Report.docx
examples/cdk2-quickrun/: README.md  ai-prompt.md  executive_summary.docx
examples/demo-cdk2/: README.md  demo_ligands.smi  site.json
examples/kimlab-cdk2-enrichment-v2/: README.md
examples/kimlab-cdk2-enrichment-v2/docking/: docking_report.md
examples/kimlab-cdk2-enrichment-v2/fep/: fep_report.md  fep_results.json
examples/kimlab-cdk2-enrichment-v2/hit-refinement/: hit_refinement_report.md  hit_refinement_summary.json  per_ligand_seed_summary.csv  (+1 more)
install/: INSTALL.md  README.md  environment.openfe-rbfe.yml  environment.yml  install.sh
src/oslab/: __init__.py  analog_library.py  benchmarks.py  binding_sites.py  cli.py  compound_registry.py  dashboard.py  demo_results.py  docking.py  domain_annotations.py  fep.py  fep_analysis.py  fep_run.py  fep_setup.py  gpu.py  hit_clustering.py  hit_refinement.py  hpc.py  hpc_terminal.py  interactions.py  jobs.py  ligand_filtering.py  ligand_prep.py  ligand_sources.py  md_interactions.py  md_optimization.py  md_prep.py  md_simulation.py  mmgbsa.py  model.py  openfe_backend.py  openfe_runner.py  orchestration.py  project.py  protein.py  refine_openmm.py  reporting.py  schemas.py  screening.py  structures.py  (+5 more)
(+11 files in other folders)
