[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-structure-lab"
version = "0.1.0"
description = "Open-source orchestration layer for protein preparation, refinement, docking, and early drug-discovery workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Hyung L. Kim" }]
dependencies = [
  "pydantic>=2",
  "PyYAML>=6",
]

[project.optional-dependencies]
chem = [
  "rdkit",
  "openmm",
  "pdbfixer",
  "mdanalysis",
  "prody",
]
dev = ["pytest>=8"]

[project.scripts]
oslab = "oslab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oslab = [
  "presets/**/*.yml",
  "demo/**/*",
  "templates/*",
  "templates/**/*",
  "static/*",
  "static/**/*",
  "bundled_demo/*",
  "bundled_demo/**/*",
]
